--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="green">#008000</color>
     <color name="blue">#0000FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#7d7d7d</color>
 
 </resources>
