--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/tvSteps"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/roundedbutton"
         android:text="@string/set_work_location"
         android:textColor="@color/white" />
 
@@ -41,28 +41,13 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/btnTweet"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="79dp"
-        android:background="@color/blue"
-        android:text="@string/tweet"
-        android:textColor="@color/white" />
-
-    <Button
         android:id="@+id/btnResetLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnWorkLocation"
         android:layout_centerInParent="true"
         android:layout_marginTop="5dp"
-        android:background="@color/green"
+        android:background="@drawable/roundedbutton"
         android:enabled="false"
         android:padding="5dp"
         android:text="@string/reset_location"
